More tweaks and cleanup

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
 Theme Name: WPSaaS
-Theme URI: http://underscores.me/
+Theme URI: http://wpsaas.org/
 Author: Jeff Behnke
 Author URI: http://validwebs.com
 Description: Custom theme: WPSaaS, developed by Jeff Behnke
@@ -13,34 +13,9 @@ Tags:
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 
-WPSaaS is based on Underscores http://underscores.me/, (C) 2012-2016 Automattic, Inc.
-Underscores is distributed under the terms of the GNU GPL v2 or later.
+WPSaaS is based on Twenty Sixteen is distributed under the terms of the GNU GPL v2 or later.
 
-Normalizing styles have been helped along thanks to the fine work of
-Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 */
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-# Normalize
-# Typography
-# Elements
-# Forms
-# Navigation
-	## Links
-	## Menus
-# Accessibility
-# Alignments
-# Clearings
-# Widgets
-# Content
-    ## Posts and pages
-	## Comments
-# Infinite scroll
-# Media
-	## Captions
-	## Galleries
---------------------------------------------------------------*/
 /**
  * Table of Contents
  *
@@ -3817,8 +3792,8 @@ p > video {
   .no-sidebar .page-header,
   .no-sidebar .page-content,
   .no-sidebar .content-bottom-widgets {
-    margin-right: 15%;
-    margin-left: 15%;
+    margin-right: 2%;
+    margin-left: 2%;
   }
 
   /* line 3346, src/compass/sass/vendor/_twenty-sixteen.scss */
@@ -4494,299 +4469,6 @@ p > video {
     padding: 0;
   }
 }
-/*--------------------------------------------------------------
-# Normalize
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Typography
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Elements
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Forms
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Navigation
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Accessibility
---------------------------------------------------------------*/
-/* Text meant only for screen readers. */
-/* line 2, src/compass/sass/modules/_accessibility.scss */
-.screen-reader-text {
-  clip: rect(1px, 1px, 1px, 1px);
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-}
-/* line 9, src/compass/sass/modules/_accessibility.scss */
-.screen-reader-text:focus {
-  background-color: #f1f1f1;
-  border-radius: 3px;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-  clip: auto !important;
-  color: #21759b;
-  display: block;
-  font-size: 14px;
-  font-size: 0.875rem;
-  font-weight: bold;
-  height: auto;
-  left: 5px;
-  line-height: normal;
-  padding: 15px 23px 14px;
-  text-decoration: none;
-  top: 5px;
-  width: auto;
-  z-index: 100000;
-  /* Above WP toolbar. */
-}
-
-/* Do not show the outline on the skip link target. */
-/* line 30, src/compass/sass/modules/_accessibility.scss */
-#content[tabindex="-1"]:focus {
-  outline: 0;
-}
-
-/*--------------------------------------------------------------
-# Alignments
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/modules/_alignments.scss */
-.alignleft {
-  display: inline;
-  float: left;
-  margin-right: 1.5em;
-}
-
-/* line 7, src/compass/sass/modules/_alignments.scss */
-.alignright {
-  display: inline;
-  float: right;
-  margin-left: 1.5em;
-}
-
-/* line 13, src/compass/sass/modules/_alignments.scss */
-.aligncenter {
-  clear: both;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/*--------------------------------------------------------------
-# Clearings
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/modules/_clearings.scss */
-.clear:before,
-.clear:after,
-.entry-content:before,
-.entry-content:after,
-.comment-content:before,
-.comment-content:after,
-.site-header:before,
-.site-header:after,
-.site-content:before,
-.site-content:after,
-.site-footer:before,
-.site-footer:after {
-  content: "";
-  display: table;
-  table-layout: fixed;
-}
-
-/* line 16, src/compass/sass/modules/_clearings.scss */
-.clear:after,
-.entry-content:after,
-.comment-content:after,
-.site-header:after,
-.site-content:after,
-.site-footer:after {
-  clear: both;
-}
-
-/*--------------------------------------------------------------
-# Widgets
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/site/secondary/_widgets.scss */
-.widget {
-  margin: 0 0 1.5em;
-  /* Make sure select elements fit in widgets. */
-}
-/* line 5, src/compass/sass/site/secondary/_widgets.scss */
-.widget select {
-  max-width: 100%;
-}
-
-/*--------------------------------------------------------------
-# Content
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-## Posts and pages
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/site/primary/_posts-and-pages.scss */
-.sticky {
-  display: block;
-}
-
-/* line 5, src/compass/sass/site/primary/_posts-and-pages.scss */
-.hentry {
-  margin: 0 0 1.5em;
-}
-
-/* line 9, src/compass/sass/site/primary/_posts-and-pages.scss */
-.byline,
-.updated:not(.published) {
-  display: none;
-}
-
-/* line 14, src/compass/sass/site/primary/_posts-and-pages.scss */
-.single .byline,
-.group-blog .byline {
-  display: inline;
-}
-
-/* line 19, src/compass/sass/site/primary/_posts-and-pages.scss */
-.page-content,
-.entry-content,
-.entry-summary {
-  margin: 1.5em 0 0;
-}
-
-/* line 25, src/compass/sass/site/primary/_posts-and-pages.scss */
-.page-links {
-  clear: both;
-  margin: 0 0 1.5em;
-}
-
-/*--------------------------------------------------------------
-## Comments
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/site/primary/_comments.scss */
-.comment-content a {
-  word-wrap: break-word;
-}
-
-/* line 4, src/compass/sass/site/primary/_comments.scss */
-.bypostauthor {
-  display: block;
-}
-
-/*--------------------------------------------------------------
-# Infinite scroll
---------------------------------------------------------------*/
-/* Globally hidden elements when Infinite Scroll is supported and in use. */
-/* line 2, src/compass/sass/modules/_infinite-scroll.scss */
-.infinite-scroll .posts-navigation,
-.infinite-scroll.neverending .site-footer {
-  /* Theme Footer (when set to scrolling) */
-  display: none;
-}
-
-/* When Infinite Scroll has reached its end we need to re-display elements that were hidden (via .neverending) before. */
-/* line 8, src/compass/sass/modules/_infinite-scroll.scss */
-.infinity-end.neverending .site-footer {
-  display: block;
-}
-
-/*--------------------------------------------------------------
-# Media
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/media/_media.scss */
-.page-content .wp-smiley,
-.entry-content .wp-smiley,
-.comment-content .wp-smiley {
-  border: none;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding: 0;
-}
-
-/* Make sure embeds and iframes fit their containers. */
-/* line 11, src/compass/sass/media/_media.scss */
-embed,
-iframe,
-object {
-  max-width: 100%;
-}
-
-/*--------------------------------------------------------------
-## Captions
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/media/_captions.scss */
-.wp-caption {
-  margin-bottom: 1.5em;
-  max-width: 100%;
-}
-/* line 5, src/compass/sass/media/_captions.scss */
-.wp-caption img[class*="wp-image-"] {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 9, src/compass/sass/media/_captions.scss */
-.wp-caption .wp-caption-text {
-  margin: 0.8075em 0;
-}
-
-/* line 14, src/compass/sass/media/_captions.scss */
-.wp-caption-text {
-  text-align: center;
-}
-
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
-/* line 1, src/compass/sass/media/_galleries.scss */
-.gallery {
-  margin-bottom: 1.5em;
-}
-
-/* line 5, src/compass/sass/media/_galleries.scss */
-.gallery-item {
-  display: inline-block;
-  text-align: center;
-  vertical-align: top;
-  width: 100%;
-}
-/* line 11, src/compass/sass/media/_galleries.scss */
-.gallery-columns-2 .gallery-item {
-  max-width: 50%;
-}
-/* line 15, src/compass/sass/media/_galleries.scss */
-.gallery-columns-3 .gallery-item {
-  max-width: 33.33%;
-}
-/* line 19, src/compass/sass/media/_galleries.scss */
-.gallery-columns-4 .gallery-item {
-  max-width: 25%;
-}
-/* line 23, src/compass/sass/media/_galleries.scss */
-.gallery-columns-5 .gallery-item {
-  max-width: 20%;
-}
-/* line 27, src/compass/sass/media/_galleries.scss */
-.gallery-columns-6 .gallery-item {
-  max-width: 16.66%;
-}
-/* line 31, src/compass/sass/media/_galleries.scss */
-.gallery-columns-7 .gallery-item {
-  max-width: 14.28%;
-}
-/* line 35, src/compass/sass/media/_galleries.scss */
-.gallery-columns-8 .gallery-item {
-  max-width: 12.5%;
-}
-/* line 39, src/compass/sass/media/_galleries.scss */
-.gallery-columns-9 .gallery-item {
-  max-width: 11.11%;
-}
-
-/* line 44, src/compass/sass/media/_galleries.scss */
-.gallery-caption {
-  display: block;
-}
-
 /*! Swipebox v1.3.0 | Constantin Saguin csag.co | MIT License | github.com/brutaldesign/swipebox */
 /* line 19, src/compass/sass/vendor/_swipebox.scss */
 html.swipebox-html.swipebox-touch {
