Header padding and also adding a better error visability for WP Emmet

--- a/style.css
+++ b/style.css
@@ -3813,7 +3813,7 @@ p > video {
 
   /* line 3362, src/compass/sass/vendor/_twenty-sixteen.scss */
   .site-header {
-    padding: 5.25em 4.5455%;
+    padding: 5.25em 4.5455% 2.25em 4.5455%;
   }
 
   /* line 3366, src/compass/sass/vendor/_twenty-sixteen.scss */
