--- a/src/compass/sass/_custom.scss
+++ b/src/compass/sass/_custom.scss
@@ -1,4 +1,3 @@
-
 @import "vendor/twenty-sixteen";
 
 .bold {
@@ -7,4 +6,82 @@
 
 .italic {
 	font-style: italic;
+}
+
+.wpsaas-post-series-post-content {
+	display:               inline-block;
+	width:                 100%;
+	background:            #eee;
+	padding:               20px;
+	margin:                0 0 20px 0;
+	border-radius:         5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius:    5px;
+
+	.series-link {
+		margin:  5px 0;
+		padding: 0 15px;
+	}
+}
+
+.tags-links {
+	display: block;
+	margin:  20px 0;
+	a {
+		display:               inline-block;
+		width:                 auto;
+		background:            #eee;
+		padding:               5px 10px;
+		margin:                0 5px 20px 0;
+		border-radius:         5px;
+		-webkit-border-radius: 5px;
+		-moz-border-radius:    5px;
+	}
+
+	a:hover {
+		background: #ccc;
+	}
+}
+
+.entry-footer .author-bio a {
+	text-decoration: underline;
+	color:           darkred;
+	margin:          0 5px;
+	padding:         5px 0;
+}
+
+.entry-footer .author-title {
+	clear:       none;
+	font-size:   16px;
+	font-size:   1rem;
+	font-weight: 900;
+	line-height: 1.75;
+	margin:      0;
+	font-size:   12pt;
+}
+
+body:not(.search-results) article:not(.type-page) .entry-footer {
+	float:      left;
+	margin-top: 0.1538461538em;
+	width:      80%;
+}
+
+@media screen and (min-width: 61.5625em) {
+	body:not(.search-results) article:not(.type-page) .entry-footer {
+		width:      100%;
+	}
+}
+
+.prettyprint ol.linenums > li {
+	display:         list-item;
+	list-style-type: decimal !important;
+}
+
+.entry-content, .entry-summary, .comment-content {
+
+	.prettyprint ol.linenums > li {
+		margin-left:     30px;
+		display:         list-item;
+		list-style-type: decimal !important;
+	}
 }
