--- a/style.css
+++ b/style.css
@@ -2234,7 +2234,6 @@ body:not(.search-results) .entry-summary > :last-child,
 
 /* line 1963, src/compass/sass/vendor/_twenty-sixteen.scss */
 .entry-footer > span:not(:last-child):after {
-  content: "\002f";
   display: inline-block;
   opacity: 0.7;
   padding: 0 0.538461538em;
@@ -2243,7 +2242,7 @@ body:not(.search-results) .entry-summary > :last-child,
 /* line 1970, src/compass/sass/vendor/_twenty-sixteen.scss */
 .entry-footer .avatar {
   height: 21px;
-  margin: -0.1538461538em 0.5384615385em 0 0;
+  margin: -0.1538461538em 1.75em 0 0;
   width: 21px;
 }
 
@@ -4041,7 +4040,7 @@ p > video {
   body:not(.search-results) article:not(.type-page) .entry-footer .avatar {
     display: block;
     height: auto;
-    margin: 0 0 0.5384615385em;
+    margin: 0 1.75em 0.5384615385em;
     width: 49px;
   }
 
@@ -4472,14 +4471,97 @@ p > video {
     padding: 0;
   }
 }
-/* line 4, src/compass/sass/_custom.scss */
+/* line 3, src/compass/sass/_custom.scss */
 .bold {
   font-weight: bold;
 }
 
-/* line 8, src/compass/sass/_custom.scss */
+/* line 7, src/compass/sass/_custom.scss */
 .italic {
   font-style: italic;
+}
+
+/* line 11, src/compass/sass/_custom.scss */
+.wpsaas-post-series-post-content {
+  display: inline-block;
+  width: 100%;
+  background: #eee;
+  padding: 20px;
+  margin: 0 0 20px 0;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+/* line 21, src/compass/sass/_custom.scss */
+.wpsaas-post-series-post-content .series-link {
+  margin: 5px 0;
+  padding: 0 15px;
+}
+
+/* line 27, src/compass/sass/_custom.scss */
+.tags-links {
+  display: block;
+  margin: 20px 0;
+}
+/* line 30, src/compass/sass/_custom.scss */
+.tags-links a {
+  display: inline-block;
+  width: auto;
+  background: #eee;
+  padding: 5px 10px;
+  margin: 0 5px 20px 0;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+}
+/* line 41, src/compass/sass/_custom.scss */
+.tags-links a:hover {
+  background: #ccc;
+}
+
+/* line 46, src/compass/sass/_custom.scss */
+.entry-footer .author-bio a {
+  text-decoration: underline;
+  color: darkred;
+  margin: 0 5px;
+  padding: 5px 0;
+}
+
+/* line 53, src/compass/sass/_custom.scss */
+.entry-footer .author-title {
+  clear: none;
+  font-size: 16px;
+  font-size: 1rem;
+  font-weight: 900;
+  line-height: 1.75;
+  margin: 0;
+  font-size: 12pt;
+}
+
+/* line 63, src/compass/sass/_custom.scss */
+body:not(.search-results) article:not(.type-page) .entry-footer {
+  float: left;
+  margin-top: 0.1538461538em;
+  width: 80%;
+}
+
+@media screen and (min-width: 61.5625em) {
+  /* line 70, src/compass/sass/_custom.scss */
+  body:not(.search-results) article:not(.type-page) .entry-footer {
+    width: 100%;
+  }
+}
+/* line 75, src/compass/sass/_custom.scss */
+.prettyprint ol.linenums > li {
+  display: list-item;
+  list-style-type: decimal !important;
+}
+
+/* line 82, src/compass/sass/_custom.scss */
+.entry-content .prettyprint ol.linenums > li, .entry-summary .prettyprint ol.linenums > li, .comment-content .prettyprint ol.linenums > li {
+  margin-left: 30px;
+  display: list-item;
+  list-style-type: decimal !important;
 }
 
 /********************************************************************
